sudoku-rs/src/solver/strategic/strategies/impls/snapshots/sudoku__solver__strategic__strategies__impls__naked_pairs__tests__snapshots__base_2_sample_1_direct_candidates.snap
---
source: sudoku-rs/src/solver/strategic/strategies/impls/naked_pairs.rs
description: Strategy NakedPairs executed on grid base_2_sample_1_direct_candidates
expression: "TransportDeductions :: from(deductions.clone())"
info:
  grid_input:
    - ╔═══════════╦═══════════╗
    - ║     │   2 ║     │     ║
    - ║  1  │     ║  4  │     ║
    - ║     │ 3   ║     │ 3   ║
    - ║─────┼─────║─────┼─────║
    - ║   2 │   2 ║ 1 2 │ 1   ║
    - ║     │     ║     │     ║
    - ║ 3 4 │ 3 4 ║ 3   │ 3   ║
    - ╠═══════════╬═══════════╣
    - ║   2 │   2 ║ 1   │ 1   ║
    - ║     │     ║     │     ║
    - ║ 3 4 │ 3 4 ║ 3   │ 3 4 ║
    - ║─────┼─────║─────┼─────║
    - ║     │     ║     │     ║
    - ║     │  1  ║     │  2  ║
    - ║ 3 4 │     ║ 3   │     ║
    - ╚═══════════╩═══════════╝
  deductions:
    - ""
  grid_output:
    - ╔═══════════╦═══════════╗
    - ║     │   2 ║     │     ║
    - ║  1  │     ║  4  │     ║
    - ║     │ 3   ║     │ 3   ║
    - ║─────┼─────║─────┼─────║
    - ║   2 │   2 ║ 1 2 │ 1   ║
    - ║     │     ║     │     ║
    - ║ 3 4 │ 3 4 ║ 3   │ 3   ║
    - ╠═══════════╬═══════════╣
    - ║   2 │   2 ║ 1   │ 1   ║
    - ║     │     ║     │     ║
    - ║ 3 4 │ 3 4 ║ 3   │ 3 4 ║
    - ║─────┼─────║─────┼─────║
    - ║     │     ║     │     ║
    - ║     │  1  ║     │  2  ║
    - ║ 3 4 │     ║ 3   │     ║
    - ╚═══════════╩═══════════╝
---
deductions: []
