sudoku-rs/src/solver/strategic/strategies/impls/snapshots/sudoku__solver__strategic__strategies__impls__naked_pairs__tests__snapshots__base_3_sample_1.snap
---
source: sudoku-rs/src/solver/strategic/strategies/impls/naked_pairs.rs
description: Strategy NakedPairs executed on grid base_3_sample_1
expression: "TransportDeductions :: from(deductions.clone())"
info:
  grid_input:
    - ╔═════════════════╦═════════════════╦═════════════════╗
    - ║  2  │     │  2  ║     │     │     ║     │     │     ║
    - ║   6 │  5  │     ║ 4   │  8  │  3  ║     │  1  │  7  ║
    - ║   9 │     │     ║   9 │     │     ║   9 │     │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║  2  │  2  │  2  ║     │     │  2  ║     │  23 │  23 ║
    - ║   6 │   6 │     ║  1  │   6 │   6 ║  4  │     │  5  ║
    - ║ 789 │ 78  │  8  ║     │ 7   │   9 ║     │   9 │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║     │ 12  │     ║     │     │     ║     │  2  │     ║
    - ║  3  │     │  4  ║     │     │  5  ║  6  │     │  8  ║
    - ║     │ 7   │     ║ 7 9 │ 7   │     ║     │   9 │     ║
    - ╠═════════════════╬═════════════════╬═════════════════╣
    - ║  2  │ 12  │ 12  ║     │     │ 1   ║ 1   │  2  │     ║
    - ║ 45  │ 4   │  5  ║  5  │  3  │   6 ║     │ 4 6 │  9  ║
    - ║ 78  │ 78  │  8  ║ 7   │     │     ║  8  │     │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║     │     │ 1   ║     │     │     ║     │   3 │ 1 3 ║
    - ║     │  9  │     ║  8  │  2  │  4  ║  5  │   6 │     ║
    - ║ 7   │     │     ║     │     │     ║     │     │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║  2  │ 123 │     ║     │ 1   │ 1   ║ 1 3 │     │ 123 ║
    - ║ 45  │ 4   │  6  ║  5  │  5  │     ║     │  7  │     ║
    - ║  8  │  8  │     ║   9 │     │   9 ║  8  │     │     ║
    - ╠═════════════════╬═════════════════╬═════════════════╣
    - ║  2  │  2  │     ║   3 │ 1   │ 1   ║ 1 3 │     │ 1 3 ║
    - ║ 4 6 │ 4 6 │  9  ║ 4   │ 4   │     ║     │  5  │     ║
    - ║  8  │  8  │     ║     │     │  8  ║ 7   │     │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║     │     │     ║     │     │ 1   ║ 1 3 │     │     ║
    - ║ 45  │ 4   │  7  ║  2  │  9  │     ║     │  8  │  6  ║
    - ║     │     │     ║     │     │     ║     │     │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║     │     │     ║     │     │     ║     │     │     ║
    - ║  1  │     │  3  ║  6  │  5  │  7  ║  2  │     │  4  ║
    - ║     │  8  │     ║     │     │     ║     │   9 │     ║
    - ╚═════════════════╩═════════════════╩═════════════════╝
  deductions:
    - "r1c8: delete candidate 3, r5c8: delete candidates 1,3, because of: r4c8: candidates 1,3, r6c8: candidates 1,3"
    - "r6c6: delete candidates 1,3, because of: r6c8: candidates 1,3, r7c6: candidates 1,3"
  grid_output:
    - ╔═════════════════╦═════════════════╦═════════════════╗
    - ║  2  │     │  2  ║     │     │     ║     │     │     ║
    - ║   6 │  5  │     ║ 4   │  8  │  3  ║     │  1  │  7  ║
    - ║   9 │     │     ║   9 │     │     ║   9 │     │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║  2  │  2  │  2  ║     │     │  2  ║     │  23 │  2  ║
    - ║   6 │   6 │     ║  1  │   6 │   6 ║  4  │     │  5  ║
    - ║ 789 │ 78  │  8  ║     │ 7   │   9 ║     │   9 │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║     │ 12  │     ║     │     │     ║     │  2  │     ║
    - ║  3  │     │  4  ║     │     │  5  ║  6  │     │  8  ║
    - ║     │ 7   │     ║ 7 9 │ 7   │     ║     │   9 │     ║
    - ╠═════════════════╬═════════════════╬═════════════════╣
    - ║  2  │ 12  │ 12  ║     │     │ 1   ║ 1   │  2  │     ║
    - ║ 45  │ 4   │  5  ║  5  │  3  │   6 ║     │ 4 6 │  9  ║
    - ║ 78  │ 78  │  8  ║ 7   │     │     ║  8  │     │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║     │     │ 1   ║     │     │     ║     │   3 │ 1 3 ║
    - ║     │  9  │     ║  8  │  2  │  4  ║  5  │   6 │     ║
    - ║ 7   │     │     ║     │     │     ║     │     │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║  2  │ 123 │     ║     │ 1   │ 1   ║ 1 3 │     │  2  ║
    - ║ 45  │ 4   │  6  ║  5  │  5  │     ║     │  7  │     ║
    - ║  8  │  8  │     ║   9 │     │   9 ║  8  │     │     ║
    - ╠═════════════════╬═════════════════╬═════════════════╣
    - ║  2  │  2  │     ║   3 │ 1   │ 1   ║     │     │ 1 3 ║
    - ║ 4 6 │ 4 6 │  9  ║ 4   │ 4   │     ║     │  5  │     ║
    - ║  8  │  8  │     ║     │     │  8  ║ 7   │     │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║     │     │     ║     │     │ 1   ║ 1 3 │     │     ║
    - ║ 45  │ 4   │  7  ║  2  │  9  │     ║     │  8  │  6  ║
    - ║     │     │     ║     │     │     ║     │     │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║     │     │     ║     │     │     ║     │     │     ║
    - ║  1  │     │  3  ║  6  │  5  │  7  ║  2  │     │  4  ║
    - ║     │  8  │     ║     │     │     ║     │   9 │     ║
    - ╚═════════════════╩═════════════════╩═════════════════╝
---
deductions:
  - reasons:
      - position:
          row: 4
          column: 8
        candidates:
          - 1
          - 3
      - position:
          row: 6
          column: 8
        candidates:
          - 1
          - 3
    actions:
      - position:
          row: 1
          column: 8
        deleteCandidates:
          - 3
      - position:
          row: 5
          column: 8
        deleteCandidates:
          - 1
          - 3
  - reasons:
      - position:
          row: 6
          column: 8
        candidates:
          - 1
          - 3
      - position:
          row: 7
          column: 6
        candidates:
          - 1
          - 3
    actions:
      - position:
          row: 6
          column: 6
        deleteCandidates:
          - 1
          - 3
